# license

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  project.rs
