[package]
name = "license"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "A fast and simple license manager for your projects."
repository = "https://github.com/Luminaw/license"

[dependencies]
anstyle = "1.0.14"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
spdx = { version = "0.13.4", features = ["text"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
