[package]
name = "license"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "A fast and simple license manager for your projects."
repository = "https://github.com/Luminaw/license"

[dependencies]
anstyle = "1.0.14"
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
confy = "2.0.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
spdx = { version = "0.13.4", features = ["text"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.27.0"
